unpackaged/objects/copadoQuality__SCA_Rule__c.object
<CustomObject>
	<fields>
		<fullName>copadoQuality__Active__c</fullName>
		<defaultValue>true</defaultValue>
		<label>Active</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadoQuality__Category__c</fullName>
		<label>Category</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>bestpractices</fullName>
					<label>Best Practices</label>
				</value>
				<value>
					<fullName>codestyle</fullName>
					<label>Code Style</label>
				</value>
				<value>
					<fullName>design</fullName>
					<label>Design</label>
				</value>
				<value>
					<fullName>documentation</fullName>
					<label>Documentation</label>
				</value>
				<value>
					<fullName>errorprone</fullName>
					<label>Error Prone</label>
				</value>
				<value>
					<fullName>multithreading</fullName>
					<label>Multithreading</label>
				</value>
				<value>
					<fullName>performance</fullName>
					<label>Performance</label>
				</value>
				<value>
					<fullName>security</fullName>
					<label>Security</label>
				</value>
				<value>
					<fullName>Custom</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadoQuality__ConfigJson__c</fullName>
		<label>Config Json</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadoQuality__Extension_Configuration__c</fullName>
		<label>Extension Configuration</label>
		<referenceTo>copado__ExtensionConfiguration__c</referenceTo>
		<relationshipLabel>SCA Rules</relationshipLabel>
		<relationshipName>SCA_Rules</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copadoQuality__FilePath__c</fullName>
		<label>File Path</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadoQuality__Message__c</fullName>
		<label>Message</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copadoQuality__Priority__c</fullName>
		<label>Priority</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>1</fullName>
					<label>1 - High</label>
				</value>
				<value>
					<fullName>2</fullName>
					<label>2 - Medium High</label>
				</value>
				<value>
					<fullName>3</fullName>
					<label>3 - Medium</label>
				</value>
				<value>
					<fullName>4</fullName>
					<label>4 - Medium Low</label>
				</value>
				<value>
					<fullName>5</fullName>
					<default>true</default>
					<label>5 - Low</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadoQuality__Rule_Language__c</fullName>
		<label>Rule Language</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoQuality__Rule_Name__c</fullName>
		<label>Rule Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoQuality__Rule_Reference__c</fullName>
		<label>Rule Reference</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoQuality__Rule_Type__c</fullName>
		<label>Rule Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>xpath</fullName>
					<label>XPath</label>
				</value>
				<value>
					<fullName>standard</fullName>
					<label>Standard</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadoQuality__XPath_Expression__c</fullName>
		<label>XPath Expression</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadoQuality__XPath_Version__c</fullName>
		<label>XPath Version</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>1.0</fullName>
				</value>
				<value>
					<fullName>2.0</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>SCA Rule</label>
	<nameField>
		<displayFormat>PMD[Copado Default]-{0000}</displayFormat>
		<label>Rule ID</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>SCA Rules</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>